--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mongoose-unique-validator": "^3.1.0",
     "nodemon": "^2.0.20",
     "pm2": "^5.2.2",
+    "serverless-http": "^3.2.0",
     "winston": "^3.8.2"
   }
 }
